--- a/custom_components/sporet/manifest.json
+++ b/custom_components/sporet/manifest.json
@@ -1,17 +1,17 @@
 {
-  "domain": "sporet",
-  "name": "Sporet",
-  "codeowners": [
-    "@toringer"
-  ],
-  "config_flow": true,
-  "dependencies": [],
-  "documentation": "https://github.com/yourusername/home-assistant-sporet",
-  "homekit": {},
-  "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/yourusername/home-assistant-sporet/issues",
-  "requirements": [],
-  "ssdp": [],
-  "version": "1.0.0",
-  "zeroconf": []
+    "codeowners": [
+        "@toringer"
+    ],
+    "config_flow": true,
+    "dependencies": [],
+    "documentation": "https://github.com/yourusername/home-assistant-sporet",
+    "domain": "sporet",
+    "homekit": {},
+    "iot_class": "cloud_polling",
+    "issue_tracker": "https://github.com/yourusername/home-assistant-sporet/issues",
+    "name": "Sporet",
+    "requirements": [],
+    "ssdp": [],
+    "version": "v0.2.0",
+    "zeroconf": []
 }
